Fixed the headings in footer, made the footer have two columns, aligned the logo correctly and now displays correct size

--- a/style/Sass/components/_icons.scss
+++ b/style/Sass/components/_icons.scss
@@ -316,11 +316,11 @@
 
 
   .nm-logo-med{
-    width:100%;
-    size:250px;
-    vertical-align:middle;
-    border:0;
-    margin:25px;
+height:65.6px;
+width:auto;
+position:relative;
+top:1px;
+left:1px;
   }
   
 
